--- a/animations/thermometer.html
+++ b/animations/thermometer.html
@@ -6,81 +6,27 @@
         position: relative;
         margin: 0px;
       }
-      .arrowhead {
-        left: 0;
+      .container {
+        background-color: lightgreen;
       }
     </style>
   </head>
   <body>
     <div class='container'>
-      <canvas class='thermometer'></canvas>
+      <canvas class='thermometer' id='t1'></canvas>
     </div>
+    <script src='js/thermometer.js'></script>
     <script>
-      const canvasWidth = 50;
-      const canvasHeight = 200;
-      const bulbDia = 40;
-      const shaftDia = 20;
-      const outlineThickness = 3;
-      const columnTopRange = [30, 125]
-      const animationTime = 5;
-
-      const canvasTherm = document.getElementsByClassName('thermometer')[0];
-      canvasTherm.width = canvasWidth;
-      canvasTherm.height = canvasHeight;
-      const ctxTherm = canvasTherm.getContext('2d');
-
-      let startTime = Date.now();
-      const drawTherm = () => {
-        const elapsedTimeSec = (Date.now() - startTime) / 1000;
-        const elapsedFrac = elapsedTimeSec / animationTime < 1 ?
-          elapsedTimeSec / animationTime : 1;
-
-        //   ctxTherm.clearRect(      // var gradient = ctxTherm.createLinearGradient(0, 0, arrowLength, 0);
-        // gradient.addColorStop("0", "red");
-        // gradient.addColorStop("1.0" ,"blue");
-        // Fill with gradient
-        // ctxTherm.strokeStyle = gradient;
-        ctxTherm.strokeStyle = 'black';
-        ctxTherm.lineWidth = outlineThickness;
-        ctxTherm.lineCap = 'round';
-        ctxTherm.fillStyle = 'white';
-
-        ctxTherm.beginPath();
-        ctxTherm.moveTo((canvasWidth - shaftDia) / 2, 0.8 * canvasHeight);
-        ctxTherm.lineTo((canvasWidth - shaftDia) / 2, canvasWidth / 2);
-        ctxTherm.arc(canvasWidth / 2, canvasWidth / 2, shaftDia / 2, Math.PI, 0);
-        ctxTherm.lineTo((canvasWidth + shaftDia) / 2, 0.8 * canvasHeight);
-        ctxTherm.fill();
-        ctxTherm.stroke();
-
-        ctxTherm.fillStyle = 'rgb(' + 255 * (1 - elapsedFrac) + ', 0, ' +
-          255 * elapsedFrac;
-        ctxTherm.beginPath();
-        ctxTherm.arc(
-          canvasWidth / 2, canvasHeight - canvasWidth / 2,
-          bulbDia / 2,
-          0, 2 * Math.PI
-        );
-        ctxTherm.fill();
-        ctxTherm.stroke();
-
-        ctxTherm.beginPath();
-        const colTop = columnTopRange[0] * (1 - elapsedFrac) +
-          columnTopRange[1] * elapsedFrac;
-        const colHeight = canvasHeight - canvasWidth / 2 - colTop;
-        ctxTherm.fillRect(
-          (canvasWidth - shaftDia + outlineThickness) / 2,
-          colTop,
-          shaftDia - outlineThickness,
-          colHeight
-        );
-        ctxTherm.fill();
-        if (elapsedFrac === 1) return;
-        
-        window.requestAnimationFrame(drawTherm);
-      }
-
-      window.requestAnimationFrame(drawTherm);
+      // const thermometer = (id = 't0', start = 'cold', animationTime = 5,
+      //     thermometerWidth = 50, thermometerHeight = 200, labels = false, timingArray) => {
+      // start = 'cold'|'hot'
+      // timingArray = [{startDwell: <num sec>,
+      //                 tempStart: <num degF>,
+      //                 tempFinish: <num degF>,
+      //                 animationTime = <num sec>}, {...}, ...]
+        thermometer('t1', 'hot', 10, 100, 400, true,
+          [{startDwell: 0, tempStart: 60, tempFinish: 32, animationTime: 10},
+          {startDwell: 5, tempStart: 32, tempFinish: 0, animationTime: 5}]);
     </script>
   </body>
 </html>
