more themometer tweaks

--- a/animations/thermometer.html
+++ b/animations/thermometer.html
@@ -25,6 +25,8 @@
       //                 tempFinish: <num degF>,
       //                 animationTime = <num sec>}, {...}, ...]
         thermometer('t1', 'hot', 10, 100, 400, true,
+          // [{startDwell: 0, tempStart: 0, tempFinish: 32, animationTime: 10},
+          // {startDwell: 5, tempStart: 32, tempFinish: 60, animationTime: 5}]);
           [{startDwell: 0, tempStart: 60, tempFinish: 32, animationTime: 10},
           {startDwell: 5, tempStart: 32, tempFinish: 0, animationTime: 5}]);
     </script>
