--- a/animations/making ice cubes.html
+++ b/animations/making ice cubes.html
@@ -135,7 +135,7 @@
         transform: rotateX(90deg) translate3D(0, -200px, -190px);
         clip-path: polygon(0 0, 90px 0, 90px 45px, 0 45px, 0 0);
         opacity: 0;
-        animation: disappear 25s 3s forwards;
+        animation: disappear 23s 3s forwards;
       }
       #cup-near-bottom {
         top: 220px;
@@ -146,7 +146,7 @@
         transform: rotateX(90deg) translate3D(0, -200px, -200px);
         clip-path: polygon(0 50px, 100px 50px, 100px 100px, 0 100px, 0 50px);
         opacity: 0;
-        animation: disappear 25s 3s forwards;
+        animation: disappear 23s 3s forwards;
       }
       #cup-near-bottom-upr {
         top: 225px;
@@ -157,7 +157,7 @@
         transform: rotateX(90deg) translate3D(0, -200px, -190px);
         clip-path: polygon(0 45px, 90px 45px, 90px 90px, 0 90px, 0 45px);
         opacity: 0;
-        animation: disappear 25s 3s forwards;
+        animation: disappear 23s 3s forwards;
       }
       #cup-far-lip {
         top: 215px;
@@ -179,7 +179,7 @@
         transform: rotateX(90deg) translate3D(0, -200px, -100.1px);
         clip-path: polygon(0 110px, 110px 110px, 110px 55px, 104.5px 55px, 104.5px 104.5px, 5.5px 104.5px, 5.5px 55px, 0 55px, 0 110px);
         opacity: 0;
-        animation: disappear 25s 3s forwards;
+        animation: disappear 23s 3s forwards;
       }
       #cup-front {
         top: 370px;
@@ -191,7 +191,7 @@
         transform: translateZ(-150px) rotateX(-2.866deg);
         clip-path: polygon(0 0, 110px 0, 105px 100px, 5px 100px, 0 0);
         opacity: 0;
-        animation: disappear 25s 3s forwards;
+        animation: disappear 23s 3s forwards;
       }
       #cup-front-inner {
         top: 370px;
@@ -203,7 +203,7 @@
         transform: translateZ(-155px) rotateX(-2.866deg);
         clip-path: polygon(0 0, 99px 0, 94.5px 90px, 4.5px 90px, 0 0);
         opacity: 0;
-        animation: disappear 25s 3s forwards;
+        animation: disappear 23s 3s forwards;
       }
       #cup-back {
         top: 370px;
@@ -263,7 +263,7 @@
         transform: rotateY(90deg) translateX(200px) translateZ(-50px) rotateX(2.866deg);
         clip-path: polygon(0 0, 55px 0, 55px 100px, 5px 100px, 0 0);
         opacity: 0;
-        animation: disappear 25s 3s forwards;
+        animation: disappear 23s 3s forwards;
       }
       #cup-near-left-inner {
         top: 370px;
@@ -275,7 +275,7 @@
         transform: rotateY(90deg) translateX(200px) translateZ(-45px) rotateX(2.866deg);
         clip-path: polygon(0 0, 49.5px 0, 49.5px 90px, 4.5px 90px, 0 0);
         opacity: 0;
-        animation: disappear 25s 3s forwards;
+        animation: disappear 23s 3s forwards;
       }
       #cup-far-right {
         top: 370px;
@@ -311,7 +311,7 @@
         transform:rotateY(90deg)  translateX(200px) translateZ(50px) rotateX(-2.866deg);
         clip-path: polygon(0 0, 55px 0, 55px 100px, 5px 100px, 0 0);
         opacity: 0;
-        animation: disappear 25s 3s forwards;
+        animation: disappear 23s 3s forwards;
       }
       #cup-near-right-inner {
         top: 370px;
@@ -323,7 +323,7 @@
         transform:rotateY(90deg)  translateX(200px) translateZ(45px) rotateX(-2.866deg);
         clip-path: polygon(0 0, 49.5px 0, 49.5px 90px, 4.5px 90px, 0 0);
         opacity: 0;
-        animation: disappear 25s 3s forwards;
+        animation: disappear 23s 3s forwards;
       }
       #water-far-bottom {
         top: 225px;
@@ -331,7 +331,7 @@
         width: 90px;
         height: 90px;
         background: rgba(0,0,255,.3);
-        transform: rotateX(90deg) translate3D(0, -200px, -190px);
+        transform: rotateX(90deg) translate3D(0, -200px, -189.8px);
         clip-path: polygon(0 0, 90px 0, 90px 45px, 0 45px, 0 0);
         opacity: 0;
         animation: appear 3s 3s forwards;
@@ -345,7 +345,7 @@
         transform: rotateX(90deg) translate3D(0, -200px, -190px);
         clip-path: polygon(0 45px, 90px 45px, 90px 90px, 0 90px, 0 45px);
         opacity: 0;
-        animation: disappear 25s 3s forwards;
+        animation: disappear 23s 3s forwards;
       }
       #water-front {
         top: 370px;
@@ -357,7 +357,7 @@
         transform: translateZ(-155px) rotateX(-2.866deg);
         clip-path: polygon(0.5px 10px, 98.5px 10px, 94.5px 90px, 4.5px 90px, 0.5px 10px);
         opacity: 0;
-        animation: disappear 25s 3s forwards;
+        animation: disappear 23s 3s forwards;
       }
       #water-back {
         top: 370px;
@@ -393,7 +393,7 @@
         transform: rotateY(90deg) translateX(200px) translateZ(-45px) rotateX(2.866deg);
         clip-path: polygon(0.5px 10px, 49.5px 10px, 49.5px 90px, 4.5px 90px, 0.5px 10px);
         opacity: 0;
-        animation: disappear 25s 3s forwards;
+        animation: disappear 23s 3s forwards;
       }
       #water-far-right {
         top: 370px;
@@ -402,7 +402,7 @@
         height: 90px;
         background: rgba(0,0,255,.3);
         transform-origin: 49.5px 90px;
-        transform:rotateY(90deg)  translateX(200px) translateZ(44.9px) rotateX(-2.866deg);
+        transform: rotateY(90deg)  translateX(200px) translateZ(44.9px) rotateX(-2.866deg);
         clip-path: polygon(49.5px 10px, 98.5px 10px, 94.5px 90px, 49.5px 90px, 49.5px 10px);
         opacity: 0;
         animation: appear 3s 3s forwards;
@@ -417,15 +417,15 @@
         transform:rotateY(90deg)  translateX(200px) translateZ(44.9px) rotateX(-2.866deg);
         clip-path: polygon(0.5px 10px, 49.5px 10px, 49.5px 90px, 4.5px 90px, 0.5px 10px);
         opacity: 0;
-        animation: disappear 25s 3s forwards;
+        animation: disappear 23s 3s forwards;
       }
       #water-far-top {
         top: 221px;
-        left: 430.9px;
+        left: 430.95px;
         width: 98px;
         height: 98px;
-        background: rgba(0,0,255,.3);
-        transform: rotateX(90deg) translate3D(0, -200px, -110px);
+        background: rgba(0,0,255,0.3);
+        transform: rotateX(90deg) translate3D(0, -200px, -109.85px);
         clip-path: polygon(0 0, 98px 0, 98px 49px, 0 49px, 0 0);
         opacity: 0;
         animation: appear 3s 3s forwards;
@@ -439,9 +439,15 @@
         transform: rotateX(90deg) translate3D(0, -200px, -110px);
         clip-path: polygon(0 49px, 98px 49px, 98px 98px, 0 98px, 0 49px);
         opacity: 0;
-        animation: disappear 25s 3s forwards;
+        animation: disappear 23s 3s forwards;
       }
       #water-csec {
+        top: 180.5px;
+        left: 370px;
+        opacity: 1;
+        z-index: 10;
+      }
+      #water-bubble {
         top: 180.5px;
         left: 370px;
         opacity: 1;
@@ -472,8 +478,8 @@
         to { opacity: 1; }
       }
       @keyframes disappear {
-        12% { opacity: 1; }
-        88% { opacity: 1; }
+        13% { opacity: 1; }
+        95.7% { opacity: 1; }
         to { opacity: 0; }
       }
     </style>
@@ -527,6 +533,7 @@
         <div id="water-near-top"></div>
       </div>
       <canvas id='water-csec'></canvas>
+      <canvas id='water-bubble'></canvas>
     </div>
     <script src='js/thermometer.js'></script>
     <script src='js/heat-ripple.js'></script>
@@ -554,26 +561,32 @@
       ctxLeaders.lineWidth = 1;
       ctxLeaders.stroke();
 
-      // const thermometer = (id = 't0',
-      //   change = 'cooling'|'heating'|'cold'|'hot',
-      //   animationTime = 5
-      //   canvasWidth = 50, canvasHeight = 200, 
-      //   bulbDia = 40, shaftDia = 20,
-      //   outlineThickness = 3, columnTopRange = [30, 125], delay(ms)) => {
-      thermometer('t1', 'cooling', 25, 20, 80, 16, 8, 1, [12, 50]);
-      thermometer('t2', 'cold', 5, 20, 80, 16, 8, 1, [12, 50]);
+// const thermometer = (id = 't0', start = 'cold', thermometerWidth = 50,
+//    thermometerHeight = 200, labels = false, timingArray) => {
+// start = 'cold'|'hot'
+// timingArray = [{initialDwell: <num sec>,
+//                 tempStart: <num degF>,
+//                 tempFinish: <num degF>,
+//                 tempRampTime = <num sec>}, {...}, ...]
+      thermometer('t1', 'hot', 20, 80, false,
+          [{initialDwell: 0, tempStart: 60, tempFinish: 0, tempRampTime: 25}]);
+      thermometer('t2', 'cold', 20, 80, false,
+          [{initialDwell: 0, tempStart: 0, tempFinish: 0, tempRampTime: 0}]);
 
       const waterCsec = document.getElementById('water-csec');
       waterCsec.width = 220;
       waterCsec.height = 180;
       const ctxWater = waterCsec.getContext('2d');
+      const waterBubble = document.getElementById('water-bubble');
+      waterBubble.width = 220;
+      waterBubble.height = 180;
+      const ctxWaterBub = waterBubble.getContext('2d');
 
       let particleSpeed = 5;
       const animationTime = 35;
       const particleData = [];
       const numParticles = 40;
       const particleDia = 5;
-      const gradient = ctxWater.createRadialGradient(49.5, 50, 20, 49.5, 50, 65);
       const minSpeed = 20;
       const maxSpeed = 20;
       const maxSize = 2;
@@ -615,9 +628,8 @@
         const elapsedTimeSec = (Date.now() - startTime) / 1000;
         const elapsedFrac = elapsedTimeSec / animationTime;
 
-        if (elapsedFrac > 0.4) return;
-
         ctxWater.clearRect(0, 0, waterCsec.width, waterCsec.height);
+        ctxWaterBub.clearRect(0, 0, waterBubble.width, waterBubble.height);
         
         ctxWater.beginPath();
         ctxWater.moveTo(topLeftX, 0);
@@ -626,31 +638,53 @@
         ctxWater.lineTo(bottomLeftX, waterCsec.height);
         ctxWater.lineTo(0, 0);
 
-        ctxWater.fillStyle = 'rgba(170, 212, 229, 0.7)';
+        ctxWater.fillStyle = 'rgba(170, 212, 229, 0.5)';
         ctxWater.fill();
 
-        const maxRad = 90;
-        const yOffset = elapsedFrac * waterCsec.height / 2;
+        const maxRad = 110;
+        const yOffset = elapsedFrac * waterBubble.height / 2;
         const xOffset = elapsedFrac * (topRightX + bottomRightX) / 4;
         const radius = elapsedFrac * maxRad;
-        const invSideSlope = bottomLeftX / waterCsec.height;
+        const invSideSlope = bottomLeftX / waterBubble.height;
         
-        ctxWater.beginPath();
-        ctxWater.moveTo(topRightX / 2, yOffset);
-        ctxWater.arcTo(topRightX - (xOffset + yOffset * invSideSlope), yOffset, 215.5 - xOffset, 90, radius);
-        ctxWater.arcTo(220 - (xOffset + (180 - yOffset) * invSideSlope), 180 - yOffset, 110, 180 - yOffset, radius);
-        ctxWater.arcTo(xOffset + (180 - yOffset) * invSideSlope, 180 - yOffset, 4.5 + xOffset, 90, radius);
-        ctxWater.arcTo(xOffset + yOffset * invSideSlope, yOffset, 110, yOffset, radius);
+        ctxWaterBub.beginPath();
+        ctxWaterBub.moveTo(topRightX / 2, yOffset);
+        ctxWaterBub.arcTo(topRightX - (xOffset + yOffset * invSideSlope), yOffset, 215.5 - xOffset, 90, radius);
+        ctxWaterBub.arcTo(220 - (xOffset + (180 - yOffset) * invSideSlope), 180 - yOffset, 110, 180 - yOffset, radius);
+        ctxWaterBub.arcTo(xOffset + (180 - yOffset) * invSideSlope, 180 - yOffset, 4.5 + xOffset, 90, radius);
+        ctxWaterBub.arcTo(xOffset + yOffset * invSideSlope, yOffset, 110, yOffset, radius);
+        ctxWaterBub.lineTo(topRightX / 2, yOffset);
 
-        ctxWater.fillStyle = 'rgba(0,0,255,.3)'
-        ctxWater.fill();
+        ctxWaterBub.fillStyle = 'rgba(0,0,255,.1)'
+        ctxWaterBub.shadowColor = 'rgba(0,0,255,1)'
+        ctxWaterBub.shadowBlur = 5;
+        ctxWaterBub.fill();
+        // ctxWaterBub.strokeStyle = 'rgba(0,0,255,.1)'
+        // ctxWaterBub.lineWidth = 10;
+        // ctxWaterBub.stroke();
+
+        // if (elapsedFrac > 0.3) {
+          // const gradient = ctxWaterBub.createRadialGradient(110, 90, 0, 110, 90, 100);
+          // const gradient = ctxWaterBub.createRadialGradient(0, 0, 0, 0, 0, 25);
+          // gradient.addColorStop(0, 'rgba(200,255,255,0.7');
+          // gradient.addColorStop(1, 'rgba(200,255,255,0');
+          // gradient.addColorStop(0, 'rgba(200,255,255,0.7');
+          // gradient.addColorStop(.7, 'rgba(200,255,255,0.7');
+          // gradient.addColorStop(.8, 'rgba(200,255,255,0');
+          // ctxWaterBub.fillStyle = gradient;
+          // ctxWaterBub.fill();
+          // ctxWaterBub.strokeStyle = 'rgba(200,255,255,0.5)';
+          // ctxWaterBub.strokeStyle = gradient;
+          // ctxWaterBub.lineWidth = 25;
+          // ctxWaterBub.stroke();
+        // }
 
         for (let particleNum = 0; particleNum < numParticles; particleNum++) {
-          ctxWater.beginPath();
-          ctxWater.arc(particleData[particleNum].xLoc, particleData[particleNum].yLoc,
+          ctxWaterBub.beginPath();
+          ctxWaterBub.arc(particleData[particleNum].xLoc, particleData[particleNum].yLoc,
             particleData[particleNum].size, 0, 2 * Math.PI);
-          ctxWater.fillStyle = particleData[particleNum].color;
-          ctxWater.fill();
+          ctxWaterBub.fillStyle = particleData[particleNum].color;
+          ctxWaterBub.fill();
 
           particleData[particleNum].xLoc += particleData[particleNum].vX * diffTime;
           particleData[particleNum].yLoc += particleData[particleNum].vY * diffTime;
@@ -687,32 +721,6 @@
           const yD = y7;
           const xF = x6;
           const yF = y6;
-
-          // ctxWater.fillStyle = 'black';
-          // // draw point B
-          // ctxWater.beginPath();
-          // ctxWater.arc(xB, yB, 1, 0, 2 * Math.PI);
-          // ctxWater.fill();
-          // // draw point C
-          // ctxWater.beginPath();
-          // ctxWater.arc(xC, yC, 1, 0, 2 * Math.PI);
-          // ctxWater.fill();
-          // // draw point D
-          // ctxWater.beginPath();
-          // ctxWater.arc(xD, yD, 1, 0, 2 * Math.PI);
-          // ctxWater.fill();
-          // // draw point F
-          // ctxWater.beginPath();
-          // ctxWater.arc(xF, yF, 1, 0, 2 * Math.PI);
-          // ctxWater.fill();
-          // // draw point 4
-          // ctxWater.beginPath();
-          // ctxWater.arc(x4, y4, 1, 0, 2 * Math.PI);
-          // ctxWater.fill();
-          // // draw point 8
-          // ctxWater.beginPath();
-          // ctxWater.arc(x8, y8, 1, 0, 2 * Math.PI);
-          // ctxWater.fill();
 
           // top boundary
           if (particleData[particleNum].yLoc <= y4 && particleData[particleNum].xLoc >= x4 - radius && particleData[particleNum].xLoc < xB) {
@@ -781,9 +789,8 @@
               if (particleData[particleNum].vX > 0) particleData[particleNum].vX = -particleData[particleNum].vX;
             }
           }
-
-
         }
+        if (elapsedFrac > 0.4) return;
 
         window.requestAnimationFrame(drawWater);
       }
