--- a/animations/making ice cubes.html
+++ b/animations/making ice cubes.html
@@ -138,7 +138,7 @@
         left: 430px;
         width: 100px;
         height: 100px;
-        background: rgba(255,255,255,.6);
+        background: rgba(255,255,255,.4);
         transform: rotateX(90deg) translate3D(0, -200px, -200px);
         clip-path: polygon(0 0, 100px 0, 100px 50px, 0 50px, 0 0);
         opacity: 0;
@@ -149,7 +149,7 @@
         left: 435px;
         width: 90px;
         height: 90px;
-        background: rgba(255,255,255,.6);
+        background: rgba(255,255,255,.4);
         transform: rotateX(90deg) translate3D(0, -200px, -190px);
         clip-path: polygon(0 0, 90px 0, 90px 45px, 0 45px, 0 0);
         opacity: 0;
@@ -160,7 +160,7 @@
         left: 430px;
         width: 100px;
         height: 100px;
-        background: rgba(255,255,255,.6);
+        background: rgba(255,255,255,.4);
         transform: rotateX(90deg) translate3D(0, -200px, -200px);
         clip-path: polygon(0 50px, 100px 50px, 100px 100px, 0 100px, 0 50px);
         opacity: 0;
@@ -171,7 +171,7 @@
         left: 435px;
         width: 90px;
         height: 90px;
-        background: rgba(255,255,255,.6);
+        background: rgba(255,255,255,.4);
         transform: rotateX(90deg) translate3D(0, -200px, -190px);
         clip-path: polygon(0 45px, 90px 45px, 90px 90px, 0 90px, 0 45px);
         opacity: 0;
@@ -182,7 +182,7 @@
         left: 425px;
         width: 110px;
         height: 110px;
-        background: rgba(255,255,255,.6);
+        background: rgba(255,255,255,.4);
         transform: rotateX(90deg) translate3D(0, -200px, -100.1px);
         clip-path: polygon(0 0, 110px 0, 110px 55px, 104.5px 55px, 104.5px 5.5px, 5.5px 5.5px, 5.5px 55px, 0 55px, 0 0);
         opacity: 0;
@@ -193,7 +193,7 @@
         left: 425px;
         width: 110px;
         height: 110px;
-        background: rgba(255,255,255,.6);
+        background: rgba(255,255,255,.4);
         transform: rotateX(90deg) translate3D(0, -200px, -100.1px);
         clip-path: polygon(0 110px, 110px 110px, 110px 55px, 104.5px 55px, 104.5px 104.5px, 5.5px 104.5px, 5.5px 55px, 0 55px, 0 110px);
         opacity: 0;
@@ -204,7 +204,7 @@
         left: 425px;
         width: 110px;
         height: 100px;
-        background: rgba(255,255,255,.6);
+        background: rgba(255,255,255,.4);
         transform-origin: 55px 100px;
         transform: translateZ(-150px) rotateX(-2.866deg);
         clip-path: polygon(0 0, 110px 0, 105px 100px, 5px 100px, 0 0);
@@ -216,7 +216,7 @@
         left: 430.5px;
         width: 99px;
         height: 90px;
-        background: rgba(255,255,255,.6);
+        background: rgba(255,255,255,.4);
         transform-origin: 49.5px 90px;
         transform: translateZ(-155px) rotateX(-2.866deg);
         clip-path: polygon(0 0, 99px 0, 94.5px 90px, 4.5px 90px, 0 0);
@@ -228,7 +228,7 @@
         left: 425px;
         width: 110px;
         height: 100px;
-        background: rgba(255,255,255,.6);
+        background: rgba(255,255,255,.4);
         transform-origin: 55px 100px;
         transform: translateZ(-250px) rotateX(2.866deg);
         clip-path: polygon(0 0, 110px 0, 105px 100px, 5px 100px, 0 0);
@@ -240,7 +240,7 @@
         left: 430.5px;
         width: 99px;
         height: 90px;
-        background: rgba(255,255,255,.6);
+        background: rgba(255,255,255,.4);
         transform-origin: 49.5px 90px;
         transform: translateZ(-245px) rotateX(2.866deg);
         clip-path: polygon(0 0, 99px 0, 94.5px 90px, 4.5px 90px, 0 0);
@@ -252,7 +252,7 @@
         left: 425px;
         width: 110px;
         height: 100px;
-        background: rgba(255,255,255,.6);
+        background: rgba(255,255,255,.4);
         transform-origin: 55px 100px;
         transform: rotateY(90deg) translateX(200px) translateZ(-50px) rotateX(2.866deg);
         clip-path: polygon(55px 0, 110px 0, 105px 100px, 55px 100px, 55px 0);
@@ -264,7 +264,7 @@
         left: 430.5px;
         width: 99px;
         height: 90px;
-        background: rgba(255,255,255,.6);
+        background: rgba(255,255,255,.4);
         transform-origin: 49.5px 90px;
         transform: rotateY(90deg) translateX(200px) translateZ(-45px) rotateX(2.866deg);
         clip-path: polygon(49.5px 0, 99px 0, 94.5px 90px, 49.5px 90px, 49.5px 0);
@@ -276,7 +276,7 @@
         left: 425px;
         width: 110px;
         height: 100px;
-        background: rgba(255,255,255,.6);
+        background: rgba(255,255,255,.4);
         transform-origin: 55px 100px;
         transform: rotateY(90deg) translateX(200px) translateZ(-50px) rotateX(2.866deg);
         clip-path: polygon(0 0, 55px 0, 55px 100px, 5px 100px, 0 0);
@@ -288,7 +288,7 @@
         left: 430.5px;
         width: 99px;
         height: 90px;
-        background: rgba(255,255,255,.6);
+        background: rgba(255,255,255,.4);
         transform-origin: 49.5px 90px;
         transform: rotateY(90deg) translateX(200px) translateZ(-45px) rotateX(2.866deg);
         clip-path: polygon(0 0, 49.5px 0, 49.5px 90px, 4.5px 90px, 0 0);
@@ -300,7 +300,7 @@
         left: 425px;
         width: 110px;
         height: 100px;
-        background: rgba(255,255,255,.6);
+        background: rgba(255,255,255,.4);
         transform-origin: 55px 100px;
         transform:rotateY(90deg)  translateX(200px) translateZ(50px) rotateX(-2.866deg);
         clip-path: polygon(55px 0, 110px 0, 105px 100px, 55px 100px, 55px 0);
@@ -312,7 +312,7 @@
         left: 430.5px;
         width: 99px;
         height: 90px;
-        background: rgba(255,255,255,.6);
+        background: rgba(255,255,255,.4);
         transform-origin: 49.5px 90px;
         transform:rotateY(90deg)  translateX(200px) translateZ(45px) rotateX(-2.866deg);
         clip-path: polygon(49.5px 0, 99px 0, 94.5px 90px, 49.5px 90px, 49.5px 0);
@@ -324,7 +324,7 @@
         left: 425px;
         width: 110px;
         height: 100px;
-        background: rgba(255,255,255,.6);
+        background: rgba(255,255,255,.4);
         transform-origin: 55px 100px;
         transform:rotateY(90deg)  translateX(200px) translateZ(50px) rotateX(-2.866deg);
         clip-path: polygon(0 0, 55px 0, 55px 100px, 5px 100px, 0 0);
@@ -336,7 +336,7 @@
         left: 430.5px;
         width: 99px;
         height: 90px;
-        background: rgba(255,255,255,.6);
+        background: rgba(255,255,255,.4);
         transform-origin: 49.5px 90px;
         transform:rotateY(90deg)  translateX(200px) translateZ(45px) rotateX(-2.866deg);
         clip-path: polygon(0 0, 49.5px 0, 49.5px 90px, 4.5px 90px, 0 0);
@@ -513,9 +513,9 @@
       @keyframes reposition-r1 { to { top: 20%; left: 43%; } }
       @keyframes reposition-r2 { to { top: 20%; left: 57%; } }
       @keyframes reposition-r3 { to { top: 40%; left: 68%; } }
-      @keyframes reposition-r4 { to { top: 69%; left: 67%; } }
+      @keyframes reposition-r4 { to { top: 68%; left: 67%; } }
       @keyframes reposition-r5 { to { top: 79%; } }
-      @keyframes reposition-r6 { to { top: 69%; left: 33%; } }
+      @keyframes reposition-r6 { to { top: 68%; left: 33%; } }
       @keyframes reposition-r7 { to { top: 40%; left: 32%; } }
     </style>
   </head>
@@ -590,11 +590,14 @@
       leaders.height = 540;
       const ctxLeaders = leaders.getContext('2d');
       ctxLeaders.beginPath();
-      ctxLeaders.moveTo(310, 405);
+      ctxLeaders.moveTo(315, 385);
       ctxLeaders.lineTo(480, 395);
       ctxLeaders.strokeStyle = 'black';
       ctxLeaders.lineWidth = 1;
       ctxLeaders.stroke();
+      ctxLeaders.arc(480, 395, 3, 0, 2 * Math.PI);
+      ctxLeaders.fillStyle = 'black';
+      ctxLeaders.fill();
 
 // const thermometer = (id = 't0', start = 'cold', thermometerWidth = 50,
 //    thermometerHeight = 200, labels = false, timingArray) => {
