--- a/animations/heat flow.html
+++ b/animations/heat flow.html
@@ -10,6 +10,7 @@
       #title-page {
         text-align: center;
         font-size: 6em;
+        font-weight: bold;
         color: lightblue;
         animation: title 5s ease-out forwards;
       }
@@ -98,7 +99,7 @@
   <body>
     <div id='container'>
       <div id='title-page'>
-        <div>CLEAR ICE CONCEPTS</div>
+        <div>CLEAR&nbsp;&nbsp;ICE CONCEPTS</div>
       </div>
       <div id='freezer'>
         <canvas class='thermometer' id='t1'></canvas>
