adding new animation, finishing others

--- a/animations/heat flow.html
+++ b/animations/heat flow.html
@@ -7,9 +7,20 @@
         position: absolute;
         margin: 0px;
       }
+      img {
+        top: -100px;
+        width: 1000px;
+      }
+      #container {
+        width: 960px;
+        height: 540px;
+        border: 1px solid black;
+        overflow: hidden;
+      }
       #title-page {
+        background-image: url('images/clear ice cube.jpg');
         text-align: center;
-        font-size: 6em;
+        font-size: 8em;
         font-weight: bold;
         color: lightblue;
         animation: title 5s ease-out forwards;
@@ -99,6 +110,7 @@
   <body>
     <div id='container'>
       <div id='title-page'>
+        <img src='images/clear ice cube.jpg'>
         <div>CLEAR&nbsp;&nbsp;ICE CONCEPTS</div>
       </div>
       <div id='freezer'>
