--- a/animations/heat flow.html
+++ b/animations/heat flow.html
@@ -14,7 +14,7 @@
       #container {
         width: 960px;
         height: 540px;
-        border: 1px solid black;
+        /* border: 1px solid black; */
         overflow: hidden;
       }
       #title-page {
